--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
+    "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.10.2",
